cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir40892 SHARED ${SRC_FILES} )
set_source_files_properties(file40893.cpp PROPERTIES COMPILE_FLAGS -Dfile40893)

set_source_files_properties(file40894.cpp PROPERTIES COMPILE_FLAGS -Dfile40894)

set_source_files_properties(file40895.cpp PROPERTIES COMPILE_FLAGS -Dfile40895)

set_source_files_properties(file40896.cpp PROPERTIES COMPILE_FLAGS -Dfile40896)

set_source_files_properties(file40897.cpp PROPERTIES COMPILE_FLAGS -Dfile40897)

set_source_files_properties(file40898.cpp PROPERTIES COMPILE_FLAGS -Dfile40898)

set_source_files_properties(file40899.cpp PROPERTIES COMPILE_FLAGS -Dfile40899)

set_source_files_properties(file40900.cpp PROPERTIES COMPILE_FLAGS -Dfile40900)

set_source_files_properties(file40901.cpp PROPERTIES COMPILE_FLAGS -Dfile40901)

set_source_files_properties(file40902.cpp PROPERTIES COMPILE_FLAGS -Dfile40902)

set_source_files_properties(file40903.cpp PROPERTIES COMPILE_FLAGS -Dfile40903)

set_source_files_properties(file40904.cpp PROPERTIES COMPILE_FLAGS -Dfile40904)

set_source_files_properties(file40905.cpp PROPERTIES COMPILE_FLAGS -Dfile40905)

set_source_files_properties(file40906.cpp PROPERTIES COMPILE_FLAGS -Dfile40906)

set_source_files_properties(file40907.cpp PROPERTIES COMPILE_FLAGS -Dfile40907)

set_source_files_properties(file40908.cpp PROPERTIES COMPILE_FLAGS -Dfile40908)

set_source_files_properties(file40909.cpp PROPERTIES COMPILE_FLAGS -Dfile40909)

set_source_files_properties(file40910.cpp PROPERTIES COMPILE_FLAGS -Dfile40910)

set_source_files_properties(file40911.cpp PROPERTIES COMPILE_FLAGS -Dfile40911)

set_source_files_properties(file40912.cpp PROPERTIES COMPILE_FLAGS -Dfile40912)

set_source_files_properties(file40913.cpp PROPERTIES COMPILE_FLAGS -Dfile40913)

set_source_files_properties(file40914.cpp PROPERTIES COMPILE_FLAGS -Dfile40914)

set_source_files_properties(file40915.cpp PROPERTIES COMPILE_FLAGS -Dfile40915)

set_source_files_properties(file40916.cpp PROPERTIES COMPILE_FLAGS -Dfile40916)

set_source_files_properties(file40917.cpp PROPERTIES COMPILE_FLAGS -Dfile40917)

set_source_files_properties(file40918.cpp PROPERTIES COMPILE_FLAGS -Dfile40918)

set_source_files_properties(file40919.cpp PROPERTIES COMPILE_FLAGS -Dfile40919)

set_source_files_properties(file40920.cpp PROPERTIES COMPILE_FLAGS -Dfile40920)

set_source_files_properties(file40921.cpp PROPERTIES COMPILE_FLAGS -Dfile40921)

set_source_files_properties(file40922.cpp PROPERTIES COMPILE_FLAGS -Dfile40922)

set_source_files_properties(file40923.cpp PROPERTIES COMPILE_FLAGS -Dfile40923)

set_source_files_properties(file40924.cpp PROPERTIES COMPILE_FLAGS -Dfile40924)

set_source_files_properties(file40925.cpp PROPERTIES COMPILE_FLAGS -Dfile40925)

set_source_files_properties(file40926.cpp PROPERTIES COMPILE_FLAGS -Dfile40926)

set_source_files_properties(file40927.cpp PROPERTIES COMPILE_FLAGS -Dfile40927)

set_source_files_properties(file40928.cpp PROPERTIES COMPILE_FLAGS -Dfile40928)

set_source_files_properties(file40929.cpp PROPERTIES COMPILE_FLAGS -Dfile40929)

set_source_files_properties(file40930.cpp PROPERTIES COMPILE_FLAGS -Dfile40930)

set_source_files_properties(file40931.cpp PROPERTIES COMPILE_FLAGS -Dfile40931)

set_source_files_properties(file40932.cpp PROPERTIES COMPILE_FLAGS -Dfile40932)

set_source_files_properties(file40933.cpp PROPERTIES COMPILE_FLAGS -Dfile40933)

set_source_files_properties(file40934.cpp PROPERTIES COMPILE_FLAGS -Dfile40934)

set_source_files_properties(file40935.cpp PROPERTIES COMPILE_FLAGS -Dfile40935)

set_source_files_properties(file40936.cpp PROPERTIES COMPILE_FLAGS -Dfile40936)

set_source_files_properties(file40937.cpp PROPERTIES COMPILE_FLAGS -Dfile40937)

set_source_files_properties(file40938.cpp PROPERTIES COMPILE_FLAGS -Dfile40938)

set_source_files_properties(file40939.cpp PROPERTIES COMPILE_FLAGS -Dfile40939)

set_source_files_properties(file40940.cpp PROPERTIES COMPILE_FLAGS -Dfile40940)

set_source_files_properties(file40941.cpp PROPERTIES COMPILE_FLAGS -Dfile40941)

set_source_files_properties(file40942.cpp PROPERTIES COMPILE_FLAGS -Dfile40942)

set_source_files_properties(file40943.cpp PROPERTIES COMPILE_FLAGS -Dfile40943)

set_source_files_properties(file40944.cpp PROPERTIES COMPILE_FLAGS -Dfile40944)

set_source_files_properties(file40945.cpp PROPERTIES COMPILE_FLAGS -Dfile40945)

set_source_files_properties(file40946.cpp PROPERTIES COMPILE_FLAGS -Dfile40946)

set_source_files_properties(file40947.cpp PROPERTIES COMPILE_FLAGS -Dfile40947)

set_source_files_properties(file40948.cpp PROPERTIES COMPILE_FLAGS -Dfile40948)

set_source_files_properties(file40949.cpp PROPERTIES COMPILE_FLAGS -Dfile40949)

set_source_files_properties(file40950.cpp PROPERTIES COMPILE_FLAGS -Dfile40950)

set_source_files_properties(file40951.cpp PROPERTIES COMPILE_FLAGS -Dfile40951)

set_source_files_properties(file40952.cpp PROPERTIES COMPILE_FLAGS -Dfile40952)

set_source_files_properties(file40953.cpp PROPERTIES COMPILE_FLAGS -Dfile40953)

set_source_files_properties(file40954.cpp PROPERTIES COMPILE_FLAGS -Dfile40954)

set_source_files_properties(file40955.cpp PROPERTIES COMPILE_FLAGS -Dfile40955)

set_source_files_properties(file40956.cpp PROPERTIES COMPILE_FLAGS -Dfile40956)

set_source_files_properties(file40957.cpp PROPERTIES COMPILE_FLAGS -Dfile40957)

set_source_files_properties(file40958.cpp PROPERTIES COMPILE_FLAGS -Dfile40958)

set_source_files_properties(file40959.cpp PROPERTIES COMPILE_FLAGS -Dfile40959)

set_source_files_properties(file40960.cpp PROPERTIES COMPILE_FLAGS -Dfile40960)

set_source_files_properties(file40961.cpp PROPERTIES COMPILE_FLAGS -Dfile40961)

set_source_files_properties(file40962.cpp PROPERTIES COMPILE_FLAGS -Dfile40962)

set_source_files_properties(file40963.cpp PROPERTIES COMPILE_FLAGS -Dfile40963)

set_source_files_properties(file40964.cpp PROPERTIES COMPILE_FLAGS -Dfile40964)

set_source_files_properties(file40965.cpp PROPERTIES COMPILE_FLAGS -Dfile40965)

set_source_files_properties(file40966.cpp PROPERTIES COMPILE_FLAGS -Dfile40966)

set_source_files_properties(file40967.cpp PROPERTIES COMPILE_FLAGS -Dfile40967)

set_source_files_properties(file40968.cpp PROPERTIES COMPILE_FLAGS -Dfile40968)

set_source_files_properties(file40969.cpp PROPERTIES COMPILE_FLAGS -Dfile40969)

set_source_files_properties(file40970.cpp PROPERTIES COMPILE_FLAGS -Dfile40970)

set_source_files_properties(file40971.cpp PROPERTIES COMPILE_FLAGS -Dfile40971)

set_source_files_properties(file40972.cpp PROPERTIES COMPILE_FLAGS -Dfile40972)

set_source_files_properties(file40973.cpp PROPERTIES COMPILE_FLAGS -Dfile40973)

set_source_files_properties(file40974.cpp PROPERTIES COMPILE_FLAGS -Dfile40974)

set_source_files_properties(file40975.cpp PROPERTIES COMPILE_FLAGS -Dfile40975)

set_source_files_properties(file40976.cpp PROPERTIES COMPILE_FLAGS -Dfile40976)

set_source_files_properties(file40977.cpp PROPERTIES COMPILE_FLAGS -Dfile40977)

set_source_files_properties(file40978.cpp PROPERTIES COMPILE_FLAGS -Dfile40978)

set_source_files_properties(file40979.cpp PROPERTIES COMPILE_FLAGS -Dfile40979)

set_source_files_properties(file40980.cpp PROPERTIES COMPILE_FLAGS -Dfile40980)

set_source_files_properties(file40981.cpp PROPERTIES COMPILE_FLAGS -Dfile40981)

set_source_files_properties(file40982.cpp PROPERTIES COMPILE_FLAGS -Dfile40982)

set_source_files_properties(file40983.cpp PROPERTIES COMPILE_FLAGS -Dfile40983)

set_source_files_properties(file40984.cpp PROPERTIES COMPILE_FLAGS -Dfile40984)

set_source_files_properties(file40985.cpp PROPERTIES COMPILE_FLAGS -Dfile40985)

set_source_files_properties(file40986.cpp PROPERTIES COMPILE_FLAGS -Dfile40986)

set_source_files_properties(file40987.cpp PROPERTIES COMPILE_FLAGS -Dfile40987)

set_source_files_properties(file40988.cpp PROPERTIES COMPILE_FLAGS -Dfile40988)

set_source_files_properties(file40989.cpp PROPERTIES COMPILE_FLAGS -Dfile40989)

set_source_files_properties(file40990.cpp PROPERTIES COMPILE_FLAGS -Dfile40990)

set_source_files_properties(file40991.cpp PROPERTIES COMPILE_FLAGS -Dfile40991)

set_source_files_properties(file40992.cpp PROPERTIES COMPILE_FLAGS -Dfile40992)

set_source_files_properties(file40993.cpp PROPERTIES COMPILE_FLAGS -Dfile40993)

set_source_files_properties(file40994.cpp PROPERTIES COMPILE_FLAGS -Dfile40994)

set_source_files_properties(file40995.cpp PROPERTIES COMPILE_FLAGS -Dfile40995)

set_source_files_properties(file40996.cpp PROPERTIES COMPILE_FLAGS -Dfile40996)

set_source_files_properties(file40997.cpp PROPERTIES COMPILE_FLAGS -Dfile40997)

set_source_files_properties(file40998.cpp PROPERTIES COMPILE_FLAGS -Dfile40998)

set_source_files_properties(file40999.cpp PROPERTIES COMPILE_FLAGS -Dfile40999)

set_source_files_properties(file41000.cpp PROPERTIES COMPILE_FLAGS -Dfile41000)

set_source_files_properties(file41001.cpp PROPERTIES COMPILE_FLAGS -Dfile41001)

set_source_files_properties(file41002.cpp PROPERTIES COMPILE_FLAGS -Dfile41002)

set_source_files_properties(file41003.cpp PROPERTIES COMPILE_FLAGS -Dfile41003)

set_source_files_properties(file41004.cpp PROPERTIES COMPILE_FLAGS -Dfile41004)

set_source_files_properties(file41005.cpp PROPERTIES COMPILE_FLAGS -Dfile41005)

set_source_files_properties(file41006.cpp PROPERTIES COMPILE_FLAGS -Dfile41006)

set_source_files_properties(file41007.cpp PROPERTIES COMPILE_FLAGS -Dfile41007)

set_source_files_properties(file41008.cpp PROPERTIES COMPILE_FLAGS -Dfile41008)

set_source_files_properties(file41009.cpp PROPERTIES COMPILE_FLAGS -Dfile41009)

set_source_files_properties(file41010.cpp PROPERTIES COMPILE_FLAGS -Dfile41010)

set_source_files_properties(file41011.cpp PROPERTIES COMPILE_FLAGS -Dfile41011)

set_source_files_properties(file41012.cpp PROPERTIES COMPILE_FLAGS -Dfile41012)

set_source_files_properties(file41013.cpp PROPERTIES COMPILE_FLAGS -Dfile41013)

set_source_files_properties(file41014.cpp PROPERTIES COMPILE_FLAGS -Dfile41014)
