cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir3871 SHARED ${SRC_FILES} )
add_subdirectory(dir3872)
add_subdirectory(dir4221)
add_subdirectory(dir5722)
add_subdirectory(dir5864)
set_source_files_properties(file7768.cpp PROPERTIES COMPILE_FLAGS -Dfile7768)

set_source_files_properties(file7769.cpp PROPERTIES COMPILE_FLAGS -Dfile7769)

set_source_files_properties(file7770.cpp PROPERTIES COMPILE_FLAGS -Dfile7770)

set_source_files_properties(file7771.cpp PROPERTIES COMPILE_FLAGS -Dfile7771)

set_source_files_properties(file7772.cpp PROPERTIES COMPILE_FLAGS -Dfile7772)

set_source_files_properties(file7773.cpp PROPERTIES COMPILE_FLAGS -Dfile7773)

set_source_files_properties(file7774.cpp PROPERTIES COMPILE_FLAGS -Dfile7774)

set_source_files_properties(file7775.cpp PROPERTIES COMPILE_FLAGS -Dfile7775)

set_source_files_properties(file7776.cpp PROPERTIES COMPILE_FLAGS -Dfile7776)

set_source_files_properties(file7777.cpp PROPERTIES COMPILE_FLAGS -Dfile7777)

set_source_files_properties(file7778.cpp PROPERTIES COMPILE_FLAGS -Dfile7778)

set_source_files_properties(file7779.cpp PROPERTIES COMPILE_FLAGS -Dfile7779)

set_source_files_properties(file7780.cpp PROPERTIES COMPILE_FLAGS -Dfile7780)

set_source_files_properties(file7781.cpp PROPERTIES COMPILE_FLAGS -Dfile7781)

set_source_files_properties(file7782.cpp PROPERTIES COMPILE_FLAGS -Dfile7782)

set_source_files_properties(file7783.cpp PROPERTIES COMPILE_FLAGS -Dfile7783)

set_source_files_properties(file7784.cpp PROPERTIES COMPILE_FLAGS -Dfile7784)

set_source_files_properties(file7785.cpp PROPERTIES COMPILE_FLAGS -Dfile7785)

set_source_files_properties(file7786.cpp PROPERTIES COMPILE_FLAGS -Dfile7786)

set_source_files_properties(file7787.cpp PROPERTIES COMPILE_FLAGS -Dfile7787)

set_source_files_properties(file7788.cpp PROPERTIES COMPILE_FLAGS -Dfile7788)

set_source_files_properties(file7789.cpp PROPERTIES COMPILE_FLAGS -Dfile7789)

set_source_files_properties(file7790.cpp PROPERTIES COMPILE_FLAGS -Dfile7790)

set_source_files_properties(file7791.cpp PROPERTIES COMPILE_FLAGS -Dfile7791)

set_source_files_properties(file7792.cpp PROPERTIES COMPILE_FLAGS -Dfile7792)

set_source_files_properties(file7793.cpp PROPERTIES COMPILE_FLAGS -Dfile7793)

set_source_files_properties(file7794.cpp PROPERTIES COMPILE_FLAGS -Dfile7794)

set_source_files_properties(file7795.cpp PROPERTIES COMPILE_FLAGS -Dfile7795)

set_source_files_properties(file7796.cpp PROPERTIES COMPILE_FLAGS -Dfile7796)

set_source_files_properties(file7797.cpp PROPERTIES COMPILE_FLAGS -Dfile7797)

set_source_files_properties(file7798.cpp PROPERTIES COMPILE_FLAGS -Dfile7798)

set_source_files_properties(file7799.cpp PROPERTIES COMPILE_FLAGS -Dfile7799)

set_source_files_properties(file7800.cpp PROPERTIES COMPILE_FLAGS -Dfile7800)

set_source_files_properties(file7801.cpp PROPERTIES COMPILE_FLAGS -Dfile7801)

set_source_files_properties(file7802.cpp PROPERTIES COMPILE_FLAGS -Dfile7802)

set_source_files_properties(file7803.cpp PROPERTIES COMPILE_FLAGS -Dfile7803)

set_source_files_properties(file7804.cpp PROPERTIES COMPILE_FLAGS -Dfile7804)

set_source_files_properties(file7805.cpp PROPERTIES COMPILE_FLAGS -Dfile7805)

set_source_files_properties(file7806.cpp PROPERTIES COMPILE_FLAGS -Dfile7806)

set_source_files_properties(file7807.cpp PROPERTIES COMPILE_FLAGS -Dfile7807)

set_source_files_properties(file7808.cpp PROPERTIES COMPILE_FLAGS -Dfile7808)

set_source_files_properties(file7809.cpp PROPERTIES COMPILE_FLAGS -Dfile7809)

set_source_files_properties(file7810.cpp PROPERTIES COMPILE_FLAGS -Dfile7810)

set_source_files_properties(file7811.cpp PROPERTIES COMPILE_FLAGS -Dfile7811)

set_source_files_properties(file7812.cpp PROPERTIES COMPILE_FLAGS -Dfile7812)

set_source_files_properties(file7813.cpp PROPERTIES COMPILE_FLAGS -Dfile7813)

set_source_files_properties(file7814.cpp PROPERTIES COMPILE_FLAGS -Dfile7814)

set_source_files_properties(file7815.cpp PROPERTIES COMPILE_FLAGS -Dfile7815)

set_source_files_properties(file7816.cpp PROPERTIES COMPILE_FLAGS -Dfile7816)

set_source_files_properties(file7817.cpp PROPERTIES COMPILE_FLAGS -Dfile7817)

set_source_files_properties(file7818.cpp PROPERTIES COMPILE_FLAGS -Dfile7818)

set_source_files_properties(file7819.cpp PROPERTIES COMPILE_FLAGS -Dfile7819)

set_source_files_properties(file7820.cpp PROPERTIES COMPILE_FLAGS -Dfile7820)

set_source_files_properties(file7821.cpp PROPERTIES COMPILE_FLAGS -Dfile7821)

set_source_files_properties(file7822.cpp PROPERTIES COMPILE_FLAGS -Dfile7822)

set_source_files_properties(file7823.cpp PROPERTIES COMPILE_FLAGS -Dfile7823)

set_source_files_properties(file7824.cpp PROPERTIES COMPILE_FLAGS -Dfile7824)

set_source_files_properties(file7825.cpp PROPERTIES COMPILE_FLAGS -Dfile7825)

set_source_files_properties(file7826.cpp PROPERTIES COMPILE_FLAGS -Dfile7826)

set_source_files_properties(file7827.cpp PROPERTIES COMPILE_FLAGS -Dfile7827)

set_source_files_properties(file7828.cpp PROPERTIES COMPILE_FLAGS -Dfile7828)

set_source_files_properties(file7829.cpp PROPERTIES COMPILE_FLAGS -Dfile7829)

set_source_files_properties(file7830.cpp PROPERTIES COMPILE_FLAGS -Dfile7830)

set_source_files_properties(file7831.cpp PROPERTIES COMPILE_FLAGS -Dfile7831)

set_source_files_properties(file7832.cpp PROPERTIES COMPILE_FLAGS -Dfile7832)

set_source_files_properties(file7833.cpp PROPERTIES COMPILE_FLAGS -Dfile7833)

set_source_files_properties(file7834.cpp PROPERTIES COMPILE_FLAGS -Dfile7834)

set_source_files_properties(file7835.cpp PROPERTIES COMPILE_FLAGS -Dfile7835)

set_source_files_properties(file7836.cpp PROPERTIES COMPILE_FLAGS -Dfile7836)

set_source_files_properties(file7837.cpp PROPERTIES COMPILE_FLAGS -Dfile7837)

set_source_files_properties(file7838.cpp PROPERTIES COMPILE_FLAGS -Dfile7838)

set_source_files_properties(file7839.cpp PROPERTIES COMPILE_FLAGS -Dfile7839)

set_source_files_properties(file7840.cpp PROPERTIES COMPILE_FLAGS -Dfile7840)

set_source_files_properties(file7841.cpp PROPERTIES COMPILE_FLAGS -Dfile7841)

set_source_files_properties(file7842.cpp PROPERTIES COMPILE_FLAGS -Dfile7842)

set_source_files_properties(file7843.cpp PROPERTIES COMPILE_FLAGS -Dfile7843)

set_source_files_properties(file7844.cpp PROPERTIES COMPILE_FLAGS -Dfile7844)

set_source_files_properties(file7845.cpp PROPERTIES COMPILE_FLAGS -Dfile7845)

set_source_files_properties(file7846.cpp PROPERTIES COMPILE_FLAGS -Dfile7846)

set_source_files_properties(file7847.cpp PROPERTIES COMPILE_FLAGS -Dfile7847)

set_source_files_properties(file7848.cpp PROPERTIES COMPILE_FLAGS -Dfile7848)

set_source_files_properties(file7849.cpp PROPERTIES COMPILE_FLAGS -Dfile7849)

set_source_files_properties(file7850.cpp PROPERTIES COMPILE_FLAGS -Dfile7850)

set_source_files_properties(file7851.cpp PROPERTIES COMPILE_FLAGS -Dfile7851)

set_source_files_properties(file7852.cpp PROPERTIES COMPILE_FLAGS -Dfile7852)

set_source_files_properties(file7853.cpp PROPERTIES COMPILE_FLAGS -Dfile7853)

set_source_files_properties(file7854.cpp PROPERTIES COMPILE_FLAGS -Dfile7854)

set_source_files_properties(file7855.cpp PROPERTIES COMPILE_FLAGS -Dfile7855)

set_source_files_properties(file7856.cpp PROPERTIES COMPILE_FLAGS -Dfile7856)

set_source_files_properties(file7857.cpp PROPERTIES COMPILE_FLAGS -Dfile7857)

set_source_files_properties(file7858.cpp PROPERTIES COMPILE_FLAGS -Dfile7858)

set_source_files_properties(file7859.cpp PROPERTIES COMPILE_FLAGS -Dfile7859)

set_source_files_properties(file7860.cpp PROPERTIES COMPILE_FLAGS -Dfile7860)

set_source_files_properties(file7861.cpp PROPERTIES COMPILE_FLAGS -Dfile7861)

set_source_files_properties(file7862.cpp PROPERTIES COMPILE_FLAGS -Dfile7862)

set_source_files_properties(file7863.cpp PROPERTIES COMPILE_FLAGS -Dfile7863)

set_source_files_properties(file7864.cpp PROPERTIES COMPILE_FLAGS -Dfile7864)

set_source_files_properties(file7865.cpp PROPERTIES COMPILE_FLAGS -Dfile7865)

set_source_files_properties(file7866.cpp PROPERTIES COMPILE_FLAGS -Dfile7866)

set_source_files_properties(file7867.cpp PROPERTIES COMPILE_FLAGS -Dfile7867)

set_source_files_properties(file7868.cpp PROPERTIES COMPILE_FLAGS -Dfile7868)

set_source_files_properties(file7869.cpp PROPERTIES COMPILE_FLAGS -Dfile7869)

set_source_files_properties(file7870.cpp PROPERTIES COMPILE_FLAGS -Dfile7870)

set_source_files_properties(file7871.cpp PROPERTIES COMPILE_FLAGS -Dfile7871)

set_source_files_properties(file7872.cpp PROPERTIES COMPILE_FLAGS -Dfile7872)

set_source_files_properties(file7873.cpp PROPERTIES COMPILE_FLAGS -Dfile7873)

set_source_files_properties(file7874.cpp PROPERTIES COMPILE_FLAGS -Dfile7874)

set_source_files_properties(file7875.cpp PROPERTIES COMPILE_FLAGS -Dfile7875)

set_source_files_properties(file7876.cpp PROPERTIES COMPILE_FLAGS -Dfile7876)

set_source_files_properties(file7877.cpp PROPERTIES COMPILE_FLAGS -Dfile7877)

set_source_files_properties(file7878.cpp PROPERTIES COMPILE_FLAGS -Dfile7878)

set_source_files_properties(file7879.cpp PROPERTIES COMPILE_FLAGS -Dfile7879)

set_source_files_properties(file7880.cpp PROPERTIES COMPILE_FLAGS -Dfile7880)

set_source_files_properties(file7881.cpp PROPERTIES COMPILE_FLAGS -Dfile7881)

set_source_files_properties(file7882.cpp PROPERTIES COMPILE_FLAGS -Dfile7882)

set_source_files_properties(file7883.cpp PROPERTIES COMPILE_FLAGS -Dfile7883)

set_source_files_properties(file7884.cpp PROPERTIES COMPILE_FLAGS -Dfile7884)

set_source_files_properties(file7885.cpp PROPERTIES COMPILE_FLAGS -Dfile7885)

set_source_files_properties(file7886.cpp PROPERTIES COMPILE_FLAGS -Dfile7886)

set_source_files_properties(file7887.cpp PROPERTIES COMPILE_FLAGS -Dfile7887)

set_source_files_properties(file7888.cpp PROPERTIES COMPILE_FLAGS -Dfile7888)

set_source_files_properties(file7889.cpp PROPERTIES COMPILE_FLAGS -Dfile7889)

set_source_files_properties(file7890.cpp PROPERTIES COMPILE_FLAGS -Dfile7890)

set_source_files_properties(file7891.cpp PROPERTIES COMPILE_FLAGS -Dfile7891)

set_source_files_properties(file7892.cpp PROPERTIES COMPILE_FLAGS -Dfile7892)

set_source_files_properties(file7893.cpp PROPERTIES COMPILE_FLAGS -Dfile7893)

set_source_files_properties(file7894.cpp PROPERTIES COMPILE_FLAGS -Dfile7894)

set_source_files_properties(file7895.cpp PROPERTIES COMPILE_FLAGS -Dfile7895)

set_source_files_properties(file7896.cpp PROPERTIES COMPILE_FLAGS -Dfile7896)

set_source_files_properties(file7897.cpp PROPERTIES COMPILE_FLAGS -Dfile7897)

set_source_files_properties(file7898.cpp PROPERTIES COMPILE_FLAGS -Dfile7898)

set_source_files_properties(file7899.cpp PROPERTIES COMPILE_FLAGS -Dfile7899)

set_source_files_properties(file7900.cpp PROPERTIES COMPILE_FLAGS -Dfile7900)

set_source_files_properties(file7901.cpp PROPERTIES COMPILE_FLAGS -Dfile7901)

set_source_files_properties(file7902.cpp PROPERTIES COMPILE_FLAGS -Dfile7902)

set_source_files_properties(file7903.cpp PROPERTIES COMPILE_FLAGS -Dfile7903)

set_source_files_properties(file7904.cpp PROPERTIES COMPILE_FLAGS -Dfile7904)

set_source_files_properties(file7905.cpp PROPERTIES COMPILE_FLAGS -Dfile7905)

set_source_files_properties(file7906.cpp PROPERTIES COMPILE_FLAGS -Dfile7906)

set_source_files_properties(file7907.cpp PROPERTIES COMPILE_FLAGS -Dfile7907)

set_source_files_properties(file7908.cpp PROPERTIES COMPILE_FLAGS -Dfile7908)

set_source_files_properties(file7909.cpp PROPERTIES COMPILE_FLAGS -Dfile7909)

set_source_files_properties(file7910.cpp PROPERTIES COMPILE_FLAGS -Dfile7910)

set_source_files_properties(file7911.cpp PROPERTIES COMPILE_FLAGS -Dfile7911)

set_source_files_properties(file7912.cpp PROPERTIES COMPILE_FLAGS -Dfile7912)

set_source_files_properties(file7913.cpp PROPERTIES COMPILE_FLAGS -Dfile7913)

set_source_files_properties(file7914.cpp PROPERTIES COMPILE_FLAGS -Dfile7914)

set_source_files_properties(file7915.cpp PROPERTIES COMPILE_FLAGS -Dfile7915)

set_source_files_properties(file7916.cpp PROPERTIES COMPILE_FLAGS -Dfile7916)

set_source_files_properties(file7917.cpp PROPERTIES COMPILE_FLAGS -Dfile7917)

set_source_files_properties(file7918.cpp PROPERTIES COMPILE_FLAGS -Dfile7918)

set_source_files_properties(file7919.cpp PROPERTIES COMPILE_FLAGS -Dfile7919)

set_source_files_properties(file7920.cpp PROPERTIES COMPILE_FLAGS -Dfile7920)
